--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,11 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
+        compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+        compile('com.android.support:cardview-v7:23.2.0') {
+            force = true
+        }
     }
 }
 
