--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,9 @@
 android {
     buildToolsVersion "24.0.0"
     compileSdkVersion 20
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
