--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.id=com.trgk.game
-app.mainclass=com.trgk.game.IOSLauncher
+app.mainclass=com.trgk.touchwave.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=TouchWave
