--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 android {
     buildToolsVersion "24.0.0"
-    compileSdkVersion 20
+    compileSdkVersion 16
 
     sourceSets {
         main {
@@ -82,7 +82,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.trgk.game/AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.trgk.touchwave/AndroidLauncher'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
